REGRESSION (r172975): navigator.language unable to tell region for Traditional Chinese users https://bugs.webkit.org/show_bug.cgi?id=146121 rdar://problem/21395180

Reviewed by Darin Adler.

Source/WebCore:

Revert to previous behavior, which is wrong in many ways, but not as wrong as the new one.

* platform/mac/Language.mm:
(WebCore::httpStyleLanguageCode):
(WebCore::platformUserPreferredLanguages):
* platform/spi/cf/CFBundleSPI.h:

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/mac/NavigatorLanguage.mm: Added.
(-[NavigatorLanguageDelegate webView:didFinishLoadForFrame:]):
(TestWebKitAPI::overrideAppleLanguages):
(TestWebKitAPI::languageForSystemLanguage):
(TestWebKitAPI::TEST):



Canonical link: https://commits.webkit.org/164259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185816 268f45cc-cd09-0410-ab3c-d52691b4dbfc